// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fallback to initials 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "color": "#fff",
          "fontFamily": "System",
          "fontWeight": "700",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
      ]
    }
  >
    UN
  </Text>
</View>
`;

exports[`should render as circle with bottom-left badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "bottom": -2.5,
          "left": -2.5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as circle with bottom-right badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "bottom": -2.5,
          "right": -2.5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as circle with top-left badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "left": -2.5,
          "top": -2.5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as circle with top-right badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "right": -2.5,
          "top": -2.5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as rounded square 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 10,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 5,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render as square with bottom-left badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 0,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "bottom": -5,
          "left": -5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as square with bottom-right badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 0,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "bottom": -5,
          "right": -5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as square with top-left badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 0,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "left": -5,
          "top": -5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render as square with top-right badge 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 0,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <Badge
    onLayout={[Function]}
    style={
      Array [
        Object {
          "right": -5,
          "top": -5,
        },
        Object {
          "elevation": 1,
          "position": "absolute",
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 1,
          "zIndex": 1,
        },
        undefined,
      ]
    }
    value={1}
  />
</View>
`;

exports[`should render default image 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "testUri": "../../../src/assets/default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if empty name 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if no gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render default image if no image 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "uri": "default.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render gravatar 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "uri": "https://www.gravatar.com/avatar/b58c6f14d292556214bd64909bcdb118?s=100&d=404",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render image 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 25,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render image as square 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 0,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onError={[Function]}
    onLayout={[Function]}
    source={
      Object {
        "uri": "image.png",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`should render initials 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#aeaeb2",
        "justifyContent": "center",
      },
      undefined,
      Object {
        "backgroundColor": "hsl(-216, 75%, 50%)",
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "fontSize": 20,
        },
        Object {
          "backgroundColor": "transparent",
          "color": "#fff",
          "fontFamily": "System",
          "fontWeight": "700",
          "includeFontPadding": false,
          "textAlignVertical": "center",
        },
        undefined,
      ]
    }
  >
    UN
  </Text>
</View>
`;
